--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Calculator practice from Odin</h1>
+    <div class="container">
+        <div id="result" >hello</div>
+        <div id="first-row">
+            <button id="number">7</button>
+            <button id="number">8</button>
+            <button id="number">9</button>
+            <button id="symbol">x</button>
+        </div>
+        <div id="second-row">
+            <button id="number">4</button>
+            <button id="number">5</button>
+            <button id="number">6</button>
+            <button id="symbol">-</button>
+        </div>
+        <div id="third-row">
+            <button id="number">1</button>
+            <button id="number">2</button>
+            <button id="number">3</button>
+            <button id="symbol">+</button>
+        </div>
+        <div id="fourth-row">
+            <button>clear</button>
+            <button id="number">0</button>
+            <button id="symbol">&#247;</button>
+            <button id="equalValue">=</button>
+        </div>
+
+
+    </div>
 
 
     <script src="calculator.js"></script>
