--- a/calculator.html
+++ b/calculator.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Calculator practice from Odin</h1>
     <div class="container">
-        <div id="result" >hello</div>
+        <div id="result" ></div>
         <div id="first-row">
             <button id="number">7</button>
             <button id="number">8</button>
