--- a/calculator.html
+++ b/calculator.html
@@ -29,7 +29,7 @@
             <button id="symbol">+</button>
         </div>
         <div id="fourth-row">
-            <button>clear</button>
+            <button id="clear">clear</button>
             <button id="number">0</button>
             <button id="symbol">&#247;</button>
             <button id="equalValue">=</button>
