finally finish the back end

--- a/calculator.html
+++ b/calculator.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Calculator practice from Odin</h1>
     <div class="container">
+        <div id="answer"></div>
         <div id="result" ></div>
         <div id="first-row">
             <button id="number">7</button>
