finish touch up js code and try to style it a bit

--- a/calculator.html
+++ b/calculator.html
@@ -9,21 +9,21 @@
 <body>
     <h1>Calculator practice from Odin</h1>
     <div class="container">
-        <div id="answer"></div>
-        <div id="result" ></div>
-        <div id="first-row">
+        <div id="answer" class="answer"></div>
+        <div id="result" class="result" ></div>
+        <div class="first-row">
             <button id="number">7</button>
             <button id="number">8</button>
             <button id="number">9</button>
             <button id="symbol">x</button>
         </div>
-        <div id="second-row">
+        <div class="second-row">
             <button id="number">4</button>
             <button id="number">5</button>
             <button id="number">6</button>
             <button id="symbol">-</button>
         </div>
-        <div id="third-row">
+        <div class="third-row">
             <button id="number">1</button>
             <button id="number">2</button>
             <button id="number">3</button>
